--- a/GuestBookApp/Views/Post/Index.cshtml
+++ b/GuestBookApp/Views/Post/Index.cshtml
@@ -2,6 +2,13 @@
 
 @{
     ViewData["Title"] = "Index";
+    Pager pager = new Pager();
+    int pageNo = 0;
+    if (ViewBag.Pager != null)
+    {
+        pager = ViewBag.Pager;
+        pageNo = pager.CurrentPage;
+    }
 }
 
 <h1>Comment list</h1>
@@ -50,3 +57,25 @@
 }
     </tbody>
 </table>
+<div class="container">
+    @if (pager.TotalPages > 0)
+            {
+                <ul class="pagination justify-content-end">
+                    @for (var pge = pager.StartPage; pge <= pager.EndPage; pge++)
+                {
+                        <li class="page-item @(pge == pager.CurrentPage ? "active" : "")">
+                            <a class="page-link" asp-controller="Post" asp-action="Index" asp-route-pg="@pge">@pge</a>
+                        </li>
+                }
+                    @if (pager.CurrentPage < pager.TotalPages)
+                {
+                    <li class="page-item">
+                        <a class="page-link" asp-controller="Post" asp-action="Index" asp-route-pg="@(pager.CurrentPage + 1)">Next</a>
+                    </li>
+                    <li>
+                        <a class="page-link" asp-controller="Post" asp-action="Index" asp-route-pg="@(pager.TotalPages)">Last</a>
+                    </li>
+                }
+                </ul>
+            }
+</div>
